--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.2",
     "express-basic-auth": "^1.2.1",
+    "geoip-lite": "^1.4.10",
     "lucide-react": "^0.263.1",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
